--- a/src/components/ResultItem/ResultItem.module.scss
+++ b/src/components/ResultItem/ResultItem.module.scss
@@ -6,7 +6,7 @@
   border-top: 1px solid $light;
 
   &.leftBorder {
-    border-left: 1px solid $light;
+    border-inline-start: 1px solid $light;
   }
 }
 
