--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -12,7 +12,9 @@ $mobile-max:  $screen-sm-min - 1px;
 $tablet-max:  $screen-lg-min - 1px;
 $desktop-max: $screen-xl-min - 1px;
 
-$font-family: 'Open Sans', sans-serif;
+$font-family-ar: 'Tajawal', sans-serif;
+
+$font-family-en: 'Open Sans', sans-serif;
 
 $font-size-base: 16px;
 
